Finished styling on legal.css, fixed privacy policy for dark mode

--- a/osr/static/css/base.css
+++ b/osr/static/css/base.css
@@ -537,3 +537,12 @@ textarea.form-control:disabled::placeholder {
 } 
 */
 
+/*~ ======================================  */
+/*^      TOS & PRIVACY       */
+/*~ ======================================  */
+
+
+.legal-text {
+    color: var(--color-text) !important;
+}
+
